package Cards;

public enum ChanceCardType {
    PAY_MONEY_TO_BANK_CARD,
    RECEIVE_MONEY_FROM_BANK_CARD,
    MOVE_NR_OF_FIELDS_CARD,
    RECEIVE_MONEY_FROM_PLAYERS_CARD,
    MOVE_TO_SPECIFIC_FIELD_CARD,
    MATADOR_GRANT_CARD,
    GET_OUT_OF_JAIL_CARD,
}
