package cards;

public class GetOutOfJailCard extends ChanceCard{

    public GetOutOfJailCard(String description){
        super(ChanceCardType.GET_OUT_OF_JAIL_CARD, description, 0);
    }
}
