package cards;

public class MatadorGrantCard extends ChanceCard {

    public MatadorGrantCard(String description, int amount){
        super(ChanceCardType.MATADOR_GRANT_CARD, description, amount);
    }

}
