package cards;

public class MoveNrOfFieldsCard extends ChanceCard{

    public MoveNrOfFieldsCard(String description, int fieldsToMove){
        super(ChanceCardType.MOVE_NR_OF_FIELDS_CARD, description, fieldsToMove);
    }
}
