package cards;

public class PayMoneyToBankCard extends ChanceCard{

    public PayMoneyToBankCard(String description, int amount){
        super(ChanceCardType.PAY_MONEY_TO_BANK_CARD, description, amount);
    }
}
