package cards;

public class ReceiveMoneyFromBankCard extends ChanceCard{

    public ReceiveMoneyFromBankCard(String description, int amount){
        super(ChanceCardType.RECEIVE_MONEY_FROM_BANK_CARD, description, amount);
    }
}
