package cards;

public class ReceiveMoneyFromPlayersCard extends ChanceCard{

    public ReceiveMoneyFromPlayersCard(String description, int amount){
        super(ChanceCardType.RECEIVE_MONEY_FROM_PLAYERS_CARD, description, amount);
    }
}
