@startuml
'https://plantuml.com/class-diagram

skinparam groupInheritance 2





skinparam linetype polyline
package Cards
{
   abstract class chanceCard{
       #type : ChanceCardType
       #description: String
       #value : int
   }
   class Deck{
      -chanceCardCheck :ChanceCard[]
      -drawCardCount : int

      +pullCard(): chanceCard
      +shuffleCards(): void
   }
   class GetOutOfJailCard{
   }
   class MatadorGrantCard{
   }
   class MoveNrOfFieldsCard{
   }
   class MoveToSpecificFieldCard{
   }
   class PayMoneyToBankCard{
   }
   class ReceiveMoneyFromBankCard{
   }
   class ReceiveMoneyFromPlayersCard{
   }
   enum ChanceCardType{
   }


}

Deck "1  " *-- "1..41  " chanceCard: Contains \t

ActionHandler <-- Deck


chanceCard <|-- "2" GetOutOfJailCard
chanceCard <|-- "1    " MatadorGrantCard
chanceCard <|--- "3" MoveNrOfFieldsCard
chanceCard <|--- "10 " MoveToSpecificFieldCard
chanceCard <|--- "        10 " PayMoneyToBankCard
chanceCard <|-- "12" ReceiveMoneyFromBankCard
chanceCard <|-- "3" ReceiveMoneyFromPlayersCard

ChanceCardType -r-> chanceCard



@enduml